# lms_drf

./: env.sample  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_description_alter_course_picture_and_more.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscriptioncourse.py  0006_course_amount_lesson_amount.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: creategroup.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_remove_user_username.py  0004_alter_payment_options_payment_link_and_more.py
