[tool.poetry]
name = "lms-drf"
version = "0.1.0"
description = ""
authors = ["Max Barulin <barulin.max@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"
python-dotenv = "^1.1.0"
psycopg2 = "^2.9.10"
requests = "^2.32.4"
pillow = "^11.2.1"
ipython = "^9.3.0"
redis = "^6.2.0"
djangorestframework = "^3.16.0"
django-filter = "^25.1"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
